--- a/docs/my-app/package.json
+++ b/docs/my-app/package.json
@@ -2,6 +2,10 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+
+  "homepage": "https://shminquiry.github.io/ibm-reactnative-webapp.github.io",
+
+
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
     "@testing-library/dom": "^10.4.0",
@@ -19,6 +23,10 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -39,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
