--- a/docs/my-app/package.json
+++ b/docs/my-app/package.json
@@ -25,7 +25,7 @@
     "build": "react-scripts build",
 
     "predeploy": "npm run build",
-    "deploy": "main -d build",
+    "deploy": "gh-pages -d build",
 
     "test": "react-scripts test",
     "eject": "react-scripts eject"
