--- a/docs/my-app/package.json
+++ b/docs/my-app/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
 
-  "homepage": "https://shminquiry.github.io/ibm-reactnative-webapp.github.io",
+  "homepage": "https://shminquiry.github.io/",
 
 
   "dependencies": {
